--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="./lib/dateFormat.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
     <script src="./src/Component.js"></script>
+    <script src="./src/Entity.js"></script>
     <script src="./src/TitleBarComponent.js"></script>
     <script src="./src/InventoryComponent.js"></script>
     <script src="./src/OrdersComponent.js"></script>
